--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 								Email
 							</b>
 						</label>
-						<input type="text" placeholder="Enter Email" name="email" id="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}" required>
+						<input type="text" placeholder="Enter Email" name="email" id="email" pattern="[a-zA-Z0-9.]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}" required>
 						<label for="username">
 							<b>
 								Username
