--- a/index.html
+++ b/index.html
@@ -702,9 +702,9 @@
 						<p class="formFooter">
 							By creating an account you agree to our
 							<a href="terms.html" target="_blank">
-								Terms & Privacy
+								Terms & Privacy.
 							</a>
-							.
+							
 						</p>
 						<button type="submit" class="registerbtn">
 							SIGN UP
